# getting-started-with-zkVM

./: .gitignore  README.md  TODO.md
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/guests/jwt_validator/: Cargo.toml
methods/guests/jwt_validator/src/: main.rs
methods/guests/over18/: Cargo.toml
methods/guests/over18/src/: main.rs
