[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
methods = { path = "../methods" }
const-random = "0.1.0" # Use the latest version
risc0-zkvm = { version = "^3.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = "1.0.100"

